--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-resume",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://www.maybeitsdavemeline.com/",
   "dependencies": {
     "8": "^0.0.1",
     "@testing-library/jest-dom": "^5.15.0",
