--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@testing-library/user-event": "^12.8.3",
     "animejs": "^3.2.1",
     "bootstrap": "^4.6.1",
+    "jquery": "^3.6.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-carousel-minimal": "^1.4.1",
     "react-dom": "^17.0.2",
     "react-multi-carousel": "^2.6.5",
+    "react-responsive": "^9.0.0-beta.4",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
