--- a/src/projects.json
+++ b/src/projects.json
@@ -49,7 +49,7 @@
     },
     "nahant": {
       "class":"nahant",
-      "link":"/nahant",
+      "link":"https://www.nahantbeach.com/",
       "imgUrl": "./images/desktop/nahant/nahant-INDEX.png",
       "name": "Nahant Beach"
     }
