--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "animejs": "^3.2.1",
     "bootstrap": "^4.6.1",
+    "hash-router": "^0.4.0",
     "jquery": "^3.6.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
